[package]
name = "advent_of_code"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
reduce = "0.1.3"
itertools = "0.9.0"
counter = "0.5.2"
modinverse = "0.1.1"
pom = "3.2.0"